--- a/.github/workflows/master_alloyproxy.yml
+++ b/.github/workflows/master_alloyproxy.yml
@@ -23,10 +23,10 @@ jobs:
       with:
         node-version: '10.x'
 
-    - name: npm install, build, and test
+    - name: npm install, node server.js
       run: |
         npm install
-        npm run build --if-present
+        node server.js
         npm run test --if-present
 
     - name: Run Azure webapp deploy action using publish profile credentials
