--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {},
   "scripts": {
    
-    "start": "npm install && node server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
